--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 [
 {
 "version":"1.24",
-"link":"https://youtu.be/Z6XyKzquA9Q"
+"link":"https://play.google.com/store/apps/details?id=com.zongxotic.youtube"
 }
 ]
