--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 [
 {
-"version":"1.30",
-"link":"https://youtu.be/b2hXfGvQLMQ"
+"version":"1.29",
+"link":"https://play.google.com/store/apps/details?id=com.zongxotic.youtube"
 }
 ]
