--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 [
 {
-"version":"1.41",
-"show":"show",
+"version":"1.42",
+"show":"",
 "link":"https://play.google.com/store/apps/details?id=com.zongxotic.youtube"
 }
 ]
