--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 [
 {
-"version":"1.47",
+"version":"1.48",
 "show":"",
-"link":"https://play.google.com/store/apps/details?id=com.zongxotic.youtube"
+"link":"https://play.google.com/store/apps/details?id=com.zonghub.gfx"
 }
 ]
